--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 				<p>
 					<br>
-					shamgarco@gmail.com
+					shamgarco@gmail.co
 				</p>
 			</div>
 		</aside>
@@ -148,7 +148,7 @@
 			<aside id="colorlib-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(/images/intro-bg.jpg); background-position: center;">
+				   	<li style="background-image: url(./images/intro-bg.jpg); background-position: center;">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
