--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 					<small>Text is accessible on LSM's API. <br>
 					The Recovery Version Bible is owned by LSM.<br>
 					This website only exists for saints to easily access the RcV Bible on their laptops.
+				</small>
 				</p>
 
 				<p>
