--- a/bible/61-2peter.html
+++ b/bible/61-2peter.html
@@ -226,7 +226,7 @@
 						<div class="col-md-1 sticky-parent">
 							<div class="sidebar" id="sticky_item">
 								<div class="side animate-box">
-									<h2 class="sidebar-heading">chapter</h2>
+									<h2 class="sidebar-heading">ch</h2>
 									<p>
 										<ul class="category">
 											<li><a href="#2peter-1">1</a></li>
