--- a/bible/13-1chronicles.html
+++ b/bible/13-1chronicles.html
@@ -1212,7 +1212,7 @@
 						<div class="col-md-1 sticky-parent">
 							<div class="sidebar" id="sticky_item">
 								<div class="side animate-box">
-									<h2 class="sidebar-heading">chapter</h2>
+									<h2 class="sidebar-heading">ch</h2>
 									<p>
 										<ul class="category">
 											<li><a href="#1chronicles-1">1</a></li>
