--- a/bible/4-numbers.html
+++ b/bible/4-numbers.html
@@ -1584,7 +1584,7 @@
 						<div class="col-md-1 sticky-parent">
 							<div class="sidebar" id="sticky_item">
 								<div class="side animate-box">
-									<h2 class="sidebar-heading">chapter</h2>
+									<h2 class="sidebar-heading">ch</h2>
 									<p>
 										<ul class="category">
 											<li><a href="#numbers-1">1</a></li>
