--- a/index.html
+++ b/index.html
@@ -132,16 +132,11 @@
 
 			<div class="colorlib-footer">
 				<p>
-					<small>Text is accessible on LSM's API. <br>
+					<small>Text was obtained on LSM's API. <br>
 					The Recovery Version Bible is owned by LSM.<br>
-					This website only exists for saints to easily access the RcV Bible on their laptops.
-				</small>
+					</small>
 				</p>
 
-				<p>
-					<br>
-					shamgarco@gmail.com
-				</p>
 			</div>
 		</aside>
 
