--- a/bible/40-matthew.html
+++ b/bible/40-matthew.html
@@ -417,37 +417,38 @@
 											 <sup>4</sup> And Jesus, knowing their thoughts, said, Why are you thinking evil things in your hearts?<br>
 											 <sup>5</sup> For which is easier, to say, Your sins are forgiven, or to say, Rise and walk?<br>
 											 <sup>6</sup> But that you may know that the Son of Man has authority on earth to forgive sins — then He said to the paralytic, Rise, take up your bed and go to your house.<br>
-											 <sup>7</sup> And when the crowds saw this, they feared and glorified God, who had given such authority to men.<br>
-											 <sup>8</sup> And as Jesus passed on from there, He saw a man sitting at the tax office, called Matthew, and He said to him, Follow Me. And he rose and followed Him.<br>
-											 <sup>9</sup> And as He was reclining at table in the house, behold, many tax collectors and sinners came and reclined together with Jesus and His disciples.<br>
-											 <sup>10</sup> And when the Pharisees saw it, they said to His disciples, Why does your Teacher eat with the tax collectors and sinners?<br>
-											 <sup>11</sup> Now when He heard this, He said, Those who are strong have no need of a physician, but those who are ill.<br>
-											 <sup>12</sup> But go and learn what this means, “I desire mercy and not sacrifice,” for I did not come to call the righteous, but sinners.<br>
-											 <sup>13</sup> Then the disciples of John came to Him, saying, Why do we and the Pharisees fast much, but Your disciples do not fast?<br>
-											 <sup>14</sup> And Jesus said to them, The sons of the bridechamber cannot mourn as long as the bridegroom is with them, can they? But days will come when the bridegroom will be taken away from them, and then they will fast.<br>
-											 <sup>15</sup> No one puts a patch of unfulled cloth on an old garment, for that which fills it up pulls away from the garment, and a worse tear is made.<br>
-											 <sup>16</sup> Neither do they put new wine into old wineskins; otherwise, the wineskins burst, and the wine pours out, and the wineskins are ruined; but they put new wine into fresh wineskins, and both are preserved.<br>
-											 <sup>17</sup> As He was speaking these things to them, behold, a ruler came and worshipped Him, saying, My daughter has just died, but come and lay Your hand on her, and she will live.<br>
-											 <sup>18</sup> And Jesus rose and followed him, and so did His disciples.<br>
-											 <sup>19</sup> And behold, a woman who had been suffering from a hemorrhage for twelve years approached from behind and touched the fringe of His garment,<br>
-											 <sup>20</sup> For she said within herself, If only I touch His garment, I will be healed.<br>
-											 <sup>21</sup> And Jesus, turning and seeing her, said, Take courage, daughter; your faith has healed you. And the woman was healed from that hour.<br>
-											 <sup>22</sup> And when Jesus came to the ruler’s house and saw the flute players and the crowd making a commotion,<br>
-											 <sup>23</sup> He said, Depart, for the girl has not died but is sleeping. And they laughed scornfully at Him.<br>
-											 <sup>24</sup> But when the crowd had been put out, He entered and took hold of her hand, and the girl rose up.<br>
-											 <sup>25</sup> And this report went out into all that land.<br>
-											 <sup>26</sup> And as Jesus passed on from there, two blind men followed Him, crying out and saying, Have mercy on us, Son of David!<br>
-											 <sup>27</sup> And when He came into the house, the blind men came to Him; and Jesus said to them, Do you believe that I am able to do this? They said to Him, Yes, Lord.<br>
-											 <sup>28</sup> Then He touched their eyes, saying, According to your faith, let it be done to you.<br>
-											 <sup>29</sup> And their eyes were opened. And Jesus sternly charged them saying, See that no one knows!<br>
-											 <sup>30</sup> But they went out and spread reports about Him in all that land.<br>
-											 <sup>31</sup> And as they were going out, behold, they brought to Him a dumb man possessed with a demon.<br>
-											 <sup>32</sup> And when the demon was cast out, the dumb man spoke. And the crowds marveled, saying, Never has anything like this been seen in Israel.<br>
-											 <sup>33</sup> But the Pharisees said, By the ruler of the demons He casts out the demons.<br>
-											 <sup>34</sup> And Jesus went about all the cities and the villages, teaching in their synagogues and preaching the gospel of the kingdom and healing every disease and every sickness.<br>
-											 <sup>35</sup> And seeing the crowds, He was moved with compassion for them, because they were harassed and cast away like sheep not having a shepherd.<br>
-											 <sup>36</sup> Then He said to His disciples, The harvest is great, but the workers few;<br>
-											 <sup>37</sup> Therefore beseech the Lord of the harvest that He would thrust out workers into His harvest.<br>
+											 <sup>7</sup> And he rose and went away to his house.<br>
+											 <sup>8</sup> And when the crowds saw this, they feared and glorified God, who had given such authority to men.<br>
+											 <sup>9</sup> And as Jesus passed on from there, He saw a man sitting at the tax office, called Matthew, and He said to him, Follow Me. And he rose and followed Him.<br>
+											 <sup>10</sup> And as He was reclining at table in the house, behold, many tax collectors and sinners came and reclined together with Jesus and His disciples.<br>
+											 <sup>11</sup> And when the Pharisees saw it, they said to His disciples, Why does your Teacher eat with the tax collectors and sinners?<br>
+											 <sup>12</sup> Now when He heard this, He said, Those who are strong have no need of a physician, but those who are ill.<br>
+											 <sup>13</sup> But go and learn what this means, “I desire mercy and not sacrifice,” for I did not come to call the righteous, but sinners.<br>
+											 <sup>14</sup> Then the disciples of John came to Him, saying, Why do we and the Pharisees fast much, but Your disciples do not fast?<br>
+											 <sup>15</sup> And Jesus said to them, The sons of the bridechamber cannot mourn as long as the bridegroom is with them, can they? But days will come when the bridegroom will be taken away from them, and then they will fast.<br>
+											 <sup>16</sup> No one puts a patch of unfulled cloth on an old garment, for that which fills it up pulls away from the garment, and a worse tear is made.<br>
+											 <sup>17</sup> Neither do they put new wine into old wineskins; otherwise, the wineskins burst, and the wine pours out, and the wineskins are ruined; but they put new wine into fresh wineskins, and both are preserved.<br>
+											 <sup>18</sup> As He was speaking these things to them, behold, a ruler came and worshipped Him, saying, My daughter has just died, but come and lay Your hand on her, and she will live.<br>
+											 <sup>19</sup> And Jesus rose and followed him, and so did His disciples.<br>
+											 <sup>20</sup> And behold, a woman who had been suffering from a hemorrhage for twelve years approached from behind and touched the fringe of His garment,<br>
+											 <sup>21</sup> For she said within herself, If only I touch His garment, I will be healed.<br>
+											 <sup>22</sup> And Jesus, turning and seeing her, said, Take courage, daughter; your faith has healed you. And the woman was healed from that hour.<br>
+											 <sup>23</sup> And when Jesus came to the ruler’s house and saw the flute players and the crowd making a commotion,<br>
+											 <sup>24</sup> He said, Depart, for the girl has not died but is sleeping. And they laughed scornfully at Him.<br>
+											 <sup>25</sup> But when the crowd had been put out, He entered and took hold of her hand, and the girl rose up.<br>
+											 <sup>26</sup> And this report went out into all that land.<br>
+											 <sup>27</sup> And as Jesus passed on from there, two blind men followed Him, crying out and saying, Have mercy on us, Son of David!<br>
+											 <sup>28</sup> And when He came into the house, the blind men came to Him; and Jesus said to them, Do you believe that I am able to do this? They said to Him, Yes, Lord.<br>
+											 <sup>29</sup> Then He touched their eyes, saying, According to your faith, let it be done to you.<br>
+											 <sup>30</sup> And their eyes were opened. And Jesus sternly charged them saying, See that no one knows!<br>
+											 <sup>31</sup> But they went out and spread reports about Him in all that land.<br>
+											 <sup>32</sup> And as they were going out, behold, they brought to Him a dumb man possessed with a demon.<br>
+											 <sup>33</sup> And when the demon was cast out, the dumb man spoke. And the crowds marveled, saying, Never has anything like this been seen in Israel.<br>
+											 <sup>34</sup> But the Pharisees said, By the ruler of the demons He casts out the demons.<br>
+											 <sup>35</sup> And Jesus went about all the cities and the villages, teaching in their synagogues and preaching the gospel of the kingdom and healing every disease and every sickness.<br>
+											 <sup>36</sup> And seeing the crowds, He was moved with compassion for them, because they were harassed and cast away like sheep not having a shepherd.<br>
+											 <sup>37</sup> Then He said to His disciples, The harvest is great, but the workers few;<br>
+											 <sup>38</sup> Therefore beseech the Lord of the harvest that He would thrust out workers into His harvest.<br>
 										</p>
 									</div>
 									<div class="desc">
