Added missing verses in Matthew 28

--- a/bible/40-matthew.html
+++ b/bible/40-matthew.html
@@ -1310,15 +1310,16 @@
 											 <sup>8</sup> And they went away quickly from the tomb with fear and great joy and ran to report this to His disciples.<br>
 											 <sup>9</sup> And behold, Jesus met them, saying, Rejoice! And they came to Him and took hold of His feet and worshipped Him.<br>
 											 <sup>10</sup> Then Jesus said to them, Do not be afraid. Go and report to My brothers that they should go into Galilee, and there they will see Me.<br>
-											 <sup>11</sup> And after the chief priests had gathered with the elders and had taken counsel, they gave a large sum of money to the soldiers,<br>
-											 <sup>12</sup> Saying, Say this, His disciples came by night and stole Him away while we slept.<br>
-											 <sup>13</sup> And if this comes to the governor’s ears, we will persuade him and make sure that you have nothing to worry about.<br>
-											 <sup>14</sup> And they took the money and did as they were instructed. And this account has been widely spread among the Jews until this very day.<br>
-											 <sup>15</sup> And the eleven disciples went to Galilee, to the mountain where Jesus directed them.<br>
-											 <sup>16</sup> And when they saw Him, they worshipped Him, though some doubted.<br>
-											 <sup>17</sup> And Jesus came and spoke to them, saying, All authority has been given to Me in heaven and on earth.<br>
-											 <sup>18</sup> Go therefore and disciple all the nations, baptizing them into the name of the Father and of the Son and of the Holy Spirit,<br>
-											 <sup>19</sup> Teaching them to observe all that I have commanded you. And behold, I am with you all the days until the consummation of the age.<br>
+											 <sup>11</sup> And as they were going, behold, some from the guard came into the city and reported to the chief priests all that had happened.<br>
+											 <sup>12</sup> And after the chief priests had gathered with the elders and had taken counsel, they gave a large sum of money to the soldiers,<br>
+											 <sup>13</sup> Saying, Say this, His disciples came by night and stole Him away while we slept.<br>
+											 <sup>14</sup> And if this comes to the governor’s ears, we will persuade him and make sure that you have nothing to worry about.<br>
+											 <sup>15</sup> And they took the money and did as they were instructed. And this account has been widely spread among the Jews until this very day.<br>
+											 <sup>16</sup> And the eleven disciples went to Galilee, to the mountain where Jesus directed them.<br>
+											 <sup>17</sup> And when they saw Him, they worshipped Him, though some doubted.<br>
+											 <sup>18</sup> And Jesus came and spoke to them, saying, All authority has been given to Me in heaven and on earth.<br>
+											 <sup>19</sup> Go therefore and disciple all the nations, baptizing them into the name of the Father and of the Son and of the Holy Spirit,<br>
+											 <sup>20</sup> Teaching them to observe all that I have commanded you. And behold, I am with you all the days until the consummation of the age.<br>
 										</p>
 									</div>
 
